# env-file-parser

./: .devcontainer.json  .editorconfig  .gitignore  Cargo.toml  README.md  rust-toolchain.toml
content/: 10-simple.yaml  environment.yaml
src/: arguments.rs  main.rs  variables.rs
